--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ DB_USER=YOUR_DB_USERNAME
 DB_PWD=YOUR_DB_PASSWORD
 DB_NAME=YOUR_DB_NAME
 DB_HOST=YOUR_DB_HOST
-DB_PORT=YOUR_DB_PORT
+DB_PORT=3306
 DB_DIALECT=mysql
